# dyno

./: CMakeLists.txt  README.md
include/: _dyn_impl.hpp  dyno.hpp  dynobj.hpp
test/: test_dynobj.cpp  test_main.cpp
